[package]
name = "iqos_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
btleplug = "0.11"
console = "0.15.11"
futures = "0.3"
rand = "0.9.0"
rustyline = "11.0"
tokio = { version = "1.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
